feat: polkadot node - WIP

--- a/polkadot/templates/service.yaml
+++ b/polkadot/templates/service.yaml
@@ -1,16 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "polkadot.fullname" . }}
+  name: {{ .Release.Name }}
   labels:
-{{ include "polkadot.labels" . | indent 4 }}
+    app.kubernetes.io/name: {{ .Release.Name }}
+    helm.sh/chart: {{ .Release.Name }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
 spec:
-  type: {{ .Values.service.type }}
+  clusterIP: None
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
+      name: {{ .Release.Name }}
   selector:
-    app.kubernetes.io/name: {{ include "polkadot.name" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/name: {{ .Release.Name }}
