--- a/polkadot/values.yaml
+++ b/polkadot/values.yaml
@@ -1,50 +1,46 @@
-# Default values for polkadot.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
-
 replicaCount: 1
-
 image:
-  repository: nginx
-  tag: stable
-  pullPolicy: IfNotPresent
+  repository: "parity/polkadot"
+  tag: latest
+  pullPolicy: Always
 
-imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
-
-service:
-  type: ClusterIP
-  port: 80
-
 ingress:
   enabled: false
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: chart-example.local
-      paths: []
+  host: test
 
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+service:
+  port: 9615
 
-resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
+node:
+  name: ""
+  chain: "kusama"
 
-nodeSelector: {}
+resources: 
+  limits:
+    cpu: 1500m
+    memory: 4000Mi
+  requests:
+    cpu: 100m
+    memory: 110Mi
 
-tolerations: []
+livenessProbe:
+  enabled: false
+  path: /health
+  # path: /
+  initialDelaySeconds: 10
+  periodSeconds: 30
+  timeoutSeconds: 5
+  successThreshold: 1
+  failureThreshold: 4
 
-affinity: {}
+readinessProbe:
+  enabled: false
+  path: /health
+  # path: /
+  initialDelaySeconds: 10
+  periodSeconds: 10
+  timeoutSeconds: 5 
+  successThreshold: 1
+  failureThreshold: 3
